k8s/overlays/aws/delete-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: events-api
$patch: delete
