k8s/overlays/aws/delete-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: events-api
$patch: delete
